style: change mat-card color; fix input gaps

--- a/src/app/components/input-list/input-list.component.scss
+++ b/src/app/components/input-list/input-list.component.scss
@@ -1,19 +1,22 @@
 .link-form-container {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+}
   
-    .link-row {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-    }
-  
-    mat-form-field {
-      flex: 1;
-    }
-  }
+mat-form-field {
+  flex: 1;
+}
+.link-row {
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+}
+
 
 .material-background {
   background-color: var(--mdc-dialog-container-color, var(--mat-app-surface, white));
+}
+mat-card {
+  box-shadow: none !important;
 }
